--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -53,3 +53,30 @@ body {
     );
   background-size: 20px 20px;
 }
+
+/* Thin scrollbar */
+::-webkit-scrollbar {
+  width: 6px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f0f0f0;
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+html {
+  scrollbar-width: thin;
+  scrollbar-color: #888 #f0f0f0; /* thumb color and track color */
+}
