--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -80,3 +80,7 @@ html {
   scrollbar-width: thin;
   scrollbar-color: #888 #f0f0f0; /* thumb color and track color */
 }
+
+::-webkit-scrollbar {
+    display: none;
+}
